fix: fixed #nav block overflow

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -615,10 +615,10 @@ footer {
 }
 
 #nav {
+  width: auto;
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
   bottom: 0;
 
   .navigation {
